left positioned instead of top to avoid overflow

--- a/src/app/modules/signin/components/email/email.component.scss
+++ b/src/app/modules/signin/components/email/email.component.scss
@@ -1,6 +1,6 @@
 .password {
   position: fixed;
-  top: -1000px
+  left: -1000px
 }
 
 .email {
