--- a/src/app/modules/signin/components/password/password.component.scss
+++ b/src/app/modules/signin/components/password/password.component.scss
@@ -1,7 +1,7 @@
 .password {
   &.hide {
     position: fixed;
-    top: -1000px
+    left: -1000px
   }
 }
 
